--- a/source/config/routes.yaml
+++ b/source/config/routes.yaml
@@ -2,6 +2,10 @@ controllers:
     resource: ../src/Controller/
     type: attribute
 
+logout:
+    path: /logout
+    methods: GET
+
 #my_index:
 #    path: /index
 #    controller: App\Controller\myController::index
