--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-.idea
-.idea
-/.env.local
-/.env.local.php
-/.env.*.local
-/config/secrets/prod/prod.decrypt.private.php
-/public/bundles/
-/var/
-
-/vendor/
-/.idea
+.env.local
